fixed overview padding and thumbnail alignment issue: padding all around

--- a/css/style.css
+++ b/css/style.css
@@ -268,7 +268,7 @@ aside img {
 }
 
 .overview p {
-  padding-bottom: 10px;
+  padding: 10px;
 }
 
 .testamonials {
